[code] - spark configuration